# varViewer

./: README.md
src/: Aligns.cpp  Aligns.hh  CMakeLists.txt  CNV.cpp  CNV.hh  Coverage.cpp  Coverage.hh  Depth.cpp  Depth.hh  GenerateSvg.cpp  GenerateSvg.hh  LanePlot.cpp  LanePlot.hh  LinearAlign.cpp  LinearAlign.hh  Operation.cpp  Operation.hh  Reference.cpp  Reference.hh  SV.cpp  SV.hh  Variant.cpp  Variant.hh  utils.cpp  utils.hh  varViewer.cpp
